# IPSRegex

./: .gitignore  LICENSE  Main.hs  README.md  ipsregex.cabal
src/: Graphs.hs
src/IPSRegex/: DFA.hs  NFA.hs  Parse.hs  Regex.hs
